@@ -1,6 +1,7 @@
 package no.nav.melosys.saksflyt.steg.iv;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Set;
 
 import com.google.common.collect.Sets;
@@ -64,7 +65,6 @@ public class SendVedtakUtlandTest {
         behandling.setId(BEHANDLING_ID);
         prosessinstans = new Prosessinstans();
         prosessinstans.setBehandling(behandling);
-        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKER, MOTTAKER_INSTITUSJON);
         when(behandlingService.hentBehandling(anyLong())).thenReturn(prosessinstans.getBehandling());
 
         Behandlingsresultat behandlingsresultat = new Behandlingsresultat();
@@ -78,25 +78,23 @@ public class SendVedtakUtlandTest {
         behandlingsresultat.setBehandling(behandling);
         when(behandlingsresultatService.hentBehandlingsresultat(anyLong())).thenReturn(behandlingsresultat);
 
-        when(landvelgerService.hentUtenlandskTrygdemyndighetsland(anyLong())).thenReturn(Collections.singletonList(Landkoder.AX));
-
         sendVedtakUtland = new SendVedtakUtland(eessiService, behandlingService, behandlingsresultatService, brevBestiller, landvelgerService);
     }
 
     @Test
     public void utførSteg_artikkel12Suksessfull_statusErAvgiftsoppgave() throws Exception {
-        when(eessiService.landErEessiReady(eq(BucType.LA_BUC_04.name()), eq(Landkoder.AX.name()))).thenReturn(Boolean.TRUE);
+        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(MOTTAKER_INSTITUSJON));
         sendVedtakUtland.utfør(prosessinstans);
-        verify(eessiService).opprettOgSendSed(anyLong(), eq(MOTTAKER_INSTITUSJON), eq(BucType.LA_BUC_04), eq(null));
+        verify(eessiService).opprettOgSendSed(anyLong(), eq(List.of(MOTTAKER_INSTITUSJON)), eq(BucType.LA_BUC_04), eq(null));
         assertThat(prosessinstans.getSteg()).isEqualTo(ProsessSteg.IV_OPPRETT_AVGIFTSOPPGAVE);
     }
 
     @Test
     public void utførSteg_artikkel13Suksessfull_statusErAvgiftsoppgave() throws Exception {
+        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(MOTTAKER_INSTITUSJON));
         lovvalgsperiode.setBestemmelse(Lovvalgbestemmelser_883_2004.FO_883_2004_ART13_1A);
-        when(eessiService.landErEessiReady(eq(BucType.LA_BUC_02.name()), eq(Landkoder.AX.name()))).thenReturn(Boolean.TRUE);
         sendVedtakUtland.utfør(prosessinstans);
-        verify(eessiService).opprettOgSendSed(anyLong(), eq(MOTTAKER_INSTITUSJON), eq(BucType.LA_BUC_02), eq(null));
+        verify(eessiService).opprettOgSendSed(anyLong(), eq(List.of(MOTTAKER_INSTITUSJON)), eq(BucType.LA_BUC_02), eq(null));
         assertThat(prosessinstans.getSteg()).isEqualTo(ProsessSteg.IV_OPPRETT_AVGIFTSOPPGAVE);
     }
 
@@ -111,18 +109,17 @@ public class SendVedtakUtlandTest {
 
     @Test
     public void utførStegForArtikkel11_suksessfull_statusErAvsluttBehandling() throws Exception {
+        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(MOTTAKER_INSTITUSJON));
         lovvalgsperiode.setBestemmelse(Lovvalgbestemmelser_883_2004.FO_883_2004_ART11_3A);
-        when(eessiService.landErEessiReady(eq(BucType.LA_BUC_05.name()), eq(Landkoder.AX.name()))).thenReturn(Boolean.TRUE);
         sendVedtakUtland.utfør(prosessinstans);
-        verify(eessiService).opprettOgSendSed(anyLong(), eq(MOTTAKER_INSTITUSJON), eq(BucType.LA_BUC_05), eq(null));
+        verify(eessiService).opprettOgSendSed(anyLong(), eq(List.of(MOTTAKER_INSTITUSJON)), eq(BucType.LA_BUC_05), eq(null));
         assertThat(prosessinstans.getSteg()).isEqualTo(ProsessSteg.IV_AVSLUTT_BEHANDLING);
     }
 
+    @SuppressWarnings("unchecked")
     @Test
     public void utførSteg_utenOppgittMottakerinstitusjon_forventHenterMottakerinstitusjonFraTidligereBuc() throws MelosysException {
-        when(landvelgerService.hentUtenlandskTrygdemyndighetsland(anyLong())).thenReturn(Collections.singletonList(Landkoder.SE));
-        when(eessiService.landErEessiReady(eq(BucType.LA_BUC_04.name()), eq(Landkoder.SE.name()))).thenReturn(Boolean.TRUE);
-        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKER, "");
+        prosessinstans.setData(ProsessDataKey.EESSI_MOTTAKERE, List.of(MOTTAKER_INSTITUSJON));
 
         Aktoer myndighet = new Aktoer();
         myndighet.setInstitusjonId(MOTTAKER_INSTITUSJON);
@@ -133,13 +130,11 @@ public class SendVedtakUtlandTest {
         fagsak.setGsakSaksnummer(1L);
         behandling.setFagsak(fagsak);
 
-        when(eessiService.hentMottakerinstitusjonFraBuc(any(Fagsak.class), any(BucType.class))).thenReturn(MOTTAKER_INSTITUSJON);
-
         sendVedtakUtland.utfør(prosessinstans);
 
-        ArgumentCaptor<String> captor = ArgumentCaptor.forClass(String.class);
+        ArgumentCaptor<List<String>> captor = ArgumentCaptor.forClass(List.class);
         verify(eessiService).opprettOgSendSed(anyLong(), captor.capture(), any(), any());
 
-        assertThat(captor.getValue()).isEqualTo(MOTTAKER_INSTITUSJON);
+        assertThat(captor.getValue()).containsExactly(MOTTAKER_INSTITUSJON);
     }
 }
